fix dropdown menu on small screens

--- a/src/css/menu.css
+++ b/src/css/menu.css
@@ -93,3 +93,32 @@
 .logoContainer:focus-visible {
   outline: lightgreen solid 2px;
 }
+
+@media only screen and (max-width: 750px) {
+  .shared-0-3-6 {
+    height: 40px !important;
+    font-size: 12px !important;
+    width: 100% !important;
+    padding: 10px !important;
+  }
+}
+@media only screen and (max-width: 550px) {
+  .shared-0-3-6 {
+    padding: 5px !important;
+    height: 35px !important;
+    font-size: 10px !important;
+  }
+  .drop {
+    margin-left: 75%;
+  }
+}
+@media only screen and (max-width: 470px) {
+  .shared-0-3-6 {
+    padding-right: 10px !important;
+    font-size: 8px !important;
+  }
+
+  .logo {
+    margin-left: 3% !important;
+  }
+}
